/*
 * $Id: ChangeLog,v 1.5806 2007/12/08 12:47:47 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-12-08 02:20 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source\vm\arrays.c
    * Correct minor bug in hb_arrayFromParams() when called from function with no stack frame.

  * source\compiler\harbour.slx
  * source\compiler\harbour.sly
  * source\rtl\tclass.prg
  * tests\tstdivert.prg
    * Adjusted DIVERT  syntax to use a FLAG clause:

       DIVERT TO <pFuncPointer>|<pMessagePointer> [OF <oNewSelfOrNil>] FLAGS [<nDivertFlags>]


2007-11-08 11:00 UTC-0300 Luiz Rafael Culik Guimaraes <luiz at xharbour.com.br>
  ! source/rtl/idle.c
    ! fixed problem that make 100% usage on linux on newer kernels

2007-12-07 22:40 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  + tests/tstdivert.prg
    + Sample for new DIVERT syntax

2007-12-07 22:30 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/hvm.c
    ! Fixed typos introduced when hb_stackSetActionRequest() was added which broke FINALLY functionality

  * include/hbapi.h
  * include/hbvmpub.h
  * source/vm/arrays.c
  * source/vm/classes.c
  * source/vm/debug.c
  * source/vm/estack.c
  * source/vm/extend.c
  * source/vm/fastitem.c
  * source/vm/pcount.c
  * source/vm/pvalue.c
    * Renamed members paramcnt and paramsoffset of hb_struSymbol to arguments and locals respectively
    + Added member USHORT params to hb_struSymbol

  + include/divert.ch
  * include/hbpcode.h
  * source/compiler/genc.c
  * source/compiler/gencc.c
  * source/compiler/harbour.slx
  * source/compiler/harbour.sly
  * source/compiler/hbdead.c
  * source/compiler/hbfix.c
  * source/compiler/hblbl.c
  * source/compiler/hbpcode.c
  * source/compiler/hbpcstat.c
  * source/compiler/hbstripl.c
    + Added new systax:
